[김정민] <프론트> 헤더에 임시로 채팅상담 태그추가(추후에 관리자만 볼 수 있도록변경) components에 채팅방 폼, css 추가(로그인 기능이없어서 임의로 DB데이터만 조회, DB에 insert 하시면보입니다.) <백엔드> 채팅에 필요한 config, controller, DTO, Service, mapper/xml 추가 *중요* 회원의 등급조회가 필요해서 임의로 CustomDTO 를 넣었습니다. 회원담당이신 분은 해당 DTO를 이용해주시면 감사하겠습니다.

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,14 @@
 		    <version>3.0.3</version>
 		    <scope>test</scope>
 		</dependency>
+				
+		<!-- Mybatis 테스트용 (선택 사항) -->
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter-test</artifactId>
+		    <version>3.0.3</version>
+		    <scope>test</scope>
+		</dependency>	
 		
 	</dependencies>
 
