--- a/front/react/package.json
+++ b/front/react/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-modal": "^3.16.3",
