--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ server.servlet.jsp.init-parameters.development=true
 # Controller에서 리턴될 String Type_viewName 의 prefix, suffix를 지정해 줘야 하며
 # jsp 수정시 재실행없이 바로 반영되도록 development를 true로 선언함.
 
-#DBConnection: DataSource 설정
+#DBConnection: DataSource 설정
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sdb?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=mysql
 
 #Logging Setting
 # Logging Setting
@@ -29,9 +29,9 @@ logging.level.com.example.demo=INFO
 #spring.servlet.multipart.max-file-size=100MB
 # => 요청 받을 수 있는 파일의 최대 사이즈
 #spring.servlet.multipart.max-request-size=100MB
-# => 요청 받을 수 있는 데이터 전체의 최대 사이즈
+# => 요청 받을 수 있는 데이터 전체의 최대 사이즈
 
-# Mybatis Mapper 설정
+# Mybatis Mapper 설정
 mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
 mybatis.type-aliases-package=com.example.demo.domain
 
