--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,18 @@
 		    <scope>test</scope>
 		</dependency>	
 		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<!-- JSON 처리를 위한 Jackson -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+				
+				
 	</dependencies>
 
 	<build>
