--- a/front/react/package.json
+++ b/front/react/package.json
@@ -22,7 +22,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-tooltip": "^5.28.1",
+    "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "web-vitals": "^2.1.4"
   },
