--- a/front/react/package.json
+++ b/front/react/package.json
@@ -16,6 +16,7 @@
     "iamport-react-native": "^2.0.15",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-modal": "^3.16.3",
