[HR]비밀번호 암호화 작업중

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,12 @@
 		    <artifactId>jackson-databind</artifactId>
 		</dependency>
 				
-				
+		<!-- BCryptPasswordEncoder 의존성  -->
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+		
 	</dependencies>
 
 	<build>
