--- a/front/react/package.json
+++ b/front/react/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.0",
+    "react-draggable": "^4.5.0",
     "react-hook-form": "^7.56.4",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
