--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,9 @@ logging.level.com.example.demo=INFO
 
 
 #Multipart
-#spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-file-size=10MB
 # => 요청 받을 수 있는 파일의 최대 사이즈
-#spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-request-size=10MB
 # => 요청 받을 수 있는 데이터 전체의 최대 사이즈
 
 # Mybatis Mapper 설정
